Update _config.yml to set site title, description, and build settings; add collections and defaults for finances

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,24 @@
-theme: jekyll-theme-minimal
+title: Fuse - Project 1999 Guild
+description: Official website for the Fuse guild on Project 1999
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Build settings
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+
+# Collections
+collections:
+  finances:
+    output: true
+    permalink: /finances/:year/:month/:title
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "finances"
+    values:
+      layout: "finance"
