--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
+theme: minimal
+
 
 # Collections
 collections:
