Refactor constitution.md and dkp-rules.md to enhance clarity and detail; update titles, add comprehensive guild vision and code of conduct sections, and improve DKP management instructions for better member guidance. Additionally, modify finances.md for improved table formatting and readability.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: minima
 minima:
   skin: classic
   date_format: "%b %-d, %Y"
-  nav_pages:
+  navigation_pages:
     - index.md
     - finances.md
     - constitution.md
