Refactor multiple markdown files to improve clarity and organization. Update _config.yml to reflect the new guild title and theme, enhance navigation structure, and adjust theme settings. Revise constitution.md for better formatting and emphasis on guild values. Streamline how-to-join.md by consolidating requirements and application process. Update dkp-rules.md for clearer presentation of rules and policies. Modify finances.md to reflect current balance and recent transactions, and remove redundant index.md content.

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,21 @@
-title: Fuse - Project 1999 Guild
+title: Fuse Guild
+
 description: A dedicated guild on Project 1999, focused on creating a welcoming and supportive environment for all players.
-theme: minima
+theme: jekyll-theme-chirpy
 
 # Minima theme settings
 minima:
-  skin: classic
+  skin: dark
   date_format: "%b %-d, %Y"
-  navigation_pages:
-    - index.md
-    - how-to-join.md
-    - constitution.md
-    - raid-expectations.md
-    - dkp-rules.md
-    - finances/index.md
+
+# Navigation
+navigation_pages:
+  - index.md
+  - how-to-join.md
+  - constitution.md
+  - raid-expectations.md
+  - dkp-rules.md
+
 
 # Build settings
 markdown: kramdown
