--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Fuse Guild
 
 description: A dedicated guild on Project 1999, focused on creating a welcoming and supportive environment for all players.
-theme: jekyll-theme-chirpy
+theme: minima
 
 # Minima theme settings
 minima:
